# RadiationDamage

./: .gitignore  .~lock.material_data2.xlsx#  CMakeLists.txt  Derivatives.cpp  Derivatives.h  PlotUtilities.py  README.md  Utilities.cpp  Utilities.h  Utilities.py  globals.h  main  main.cpp  main.py  material_data.xlsx  material_data2.xlsx  parameters.h  requirements.txt  results_spatial.xlsx
.RadDamageVenv/: pyvenv.cfg
.RadDamageVenv/Scripts/: activate  activate.bat
Bubbles/: PlotUtilities.py  README.md  Utilities.py  main  main.cpp  main.py  main_spatial  main_spatial.py  main_time  results_spatial.xlsx
Creep/: CMakeLists.txt  PlotUtilities.py  README.md  Utilities.py  main  main.cpp  main.py  parameters.h
Old/Bubbles_python/: BubblePlots.py  Derivatives.py  HeliumBubbles.py  Utilities.py
Old/Creep_matlab/: GMA.m  GMAderivatives.m
OpenFOAM/Literature/: PDE-ODE-space.pptx
PMI/Bubbles_spatial/: CMakeLists.txt  README.md  Utilities.py  main_spatial.cpp  main_spatial.py  main_spatial_from_curve.cpp  material_data.xlsx  results_spatial.xlsx
PMI/Simulations/: 10KeV_He_W.ipynb  curve_fit.ipynb
PlasmaMaterialInteraction/Bubbles_spatial/: CMakeLists.txt  README.md  Utilities.py  bc.txt  generate_plots.py  initial.txt  main_spatial.py  main_spatial_from_curve.cpp  parameters.txt  results_spatial.xlsx
PlasmaMaterialInteraction/Simulations/: 10KeV_He_W.ipynb  curve_fit.ipynb
PythonValidation/Bubbles_python/: BubblePlots.py  HeliumBubbles.py  Utilities.py
helium_bubbles/: BubblePlots.py  Derivatives.py
matlab/: GMAderivatives.m
(+27 files in other folders)
